--- a/FrontEnd/src/app/Dashboard/asociacion-inventario/asociacion-inventario.component.html
+++ b/FrontEnd/src/app/Dashboard/asociacion-inventario/asociacion-inventario.component.html
@@ -1,17 +1,18 @@
 <div class="contenedorPantalla">
 
     <div class="container">
-        <div class="row" *ngFor="let sucursal of ListaSucursales">
+        <div class="row" *ngFor="let asociacion of superLista">
 
             <div class="col columna1">
                 <img
-                    src="https://www.tiovivocreativo.com/wp-content/uploads/2020/02/interiorismo-dise%C3%B1o-gimnasios-planificar-espacios.jpg">
+                    src={{asociacion.Sucursal.imagen}}>
             </div>
             <div class="col columna2">
                 <div class="row">
-                    <h2>Nombre de la sucursal: {{sucursal.nombre}}</h2> 
+                    <h2>Nombre de la sucursal: {{asociacion.Sucursal.nombre}}</h2>
                 </div>
-                <div class="row"><label>Dirección: {{sucursal.provincia}}, {{sucursal.canton}}, {{sucursal.distrito}}</label></div>
+                <div class="row"><label>Dirección: {{asociacion.Sucursal.provincia}}, {{asociacion.Sucursal.canton}},
+                        {{asociacion.Sucursal.distrito}}</label></div>
 
             </div>
             <div class="col-4">
