--- a/FrontEnd/src/app/Dashboard/asociacion-tratamientos/asociacion-tratamientos.component.html
+++ b/FrontEnd/src/app/Dashboard/asociacion-tratamientos/asociacion-tratamientos.component.html
@@ -1,43 +1,30 @@
 <div class="contenedorPantalla">
 
     <div class="container">
-        <div class="row">
+        <div class="row" *ngFor="let asociacion of superLista">
 
             <div class="col columna1">
-                <img
-                    src="https://www.tiovivocreativo.com/wp-content/uploads/2020/02/interiorismo-dise%C3%B1o-gimnasios-planificar-espacios.jpg">
+                <img src={{asociacion.Sucursal.imagen}}>
             </div>
             <div class="col columna2">
                 <div class="row">
-                    <h5>Nombre de la sucursal</h5>
+                    <h2>Nombre de la sucursal: {{asociacion.Sucursal.nombre}}</h2>
                 </div>
-                <div class="row"><label>Dirección:</label></div>
+                <div class="row"><label>Dirección: {{asociacion.Sucursal.provincia}}, {{asociacion.Sucursal.canton}},
+                        {{asociacion.Sucursal.distrito}}</label></div>
 
             </div>
-            <div class="col-4">
+            <div class="col-4" >
 
                 <h2>Tratamientos asociados</h2>
-                <div class="list-group">
+                <div class="list-group" *ngFor="let tratamiento of asociacion.tratamientos">
                     <a class="list-group-item list-group-item-action active">
-                        <button href="#" type="button"  class="btn" data-bs-toggle="modal" data-bs-target="#DesacocieModal">
-                            Tratamiento
+                        <button href="#" type="button" class="btn" data-bs-toggle="modal"
+                            data-bs-target="#DesacocieModal">
+                            {{tratamiento.nombre}}
                         </button>
                     </a>
-                    <a class="list-group-item list-group-item-action active">
-                        <button href="#" type="button"  class="btn" data-bs-toggle="modal" data-bs-target="#DesacocieModal">
-                            Tratamiento
-                        </button>
-                    </a>
-                    <a class="list-group-item list-group-item-action active">
-                        <button href="#" type="button"  class="btn" data-bs-toggle="modal" data-bs-target="#DesacocieModal">
-                            Tratamiento
-                        </button>
-                    </a>
-                    <a class="list-group-item list-group-item-action active">
-                        <button href="#" type="button"  class="btn" data-bs-toggle="modal" data-bs-target="#DesacocieModal">
-                            Tratamiento
-                        </button>
-                    </a>
+                    
                 </div>
 
             </div>
@@ -46,68 +33,67 @@
                 <h2>Tratamientos disponibles</h2>
                 <div class="list-group">
                     <a class="list-group-item list-group-item-action active">
-                        <button href="#" type="button"  class="btn" data-bs-toggle="modal" data-bs-target="#AsocieModal">
+                        <button href="#" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#AsocieModal">
                             Tratamiento
                         </button>
                     </a>
                     <a class="list-group-item list-group-item-action active">
-                        <button href="#" type="button"  class="btn" data-bs-toggle="modal" data-bs-target="#AsocieModal">
+                        <button href="#" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#AsocieModal">
                             Tratamiento
                         </button>
                     </a>
                     <a class="list-group-item list-group-item-action active">
-                        <button href="#" type="button"  class="btn" data-bs-toggle="modal" data-bs-target="#AsocieModal">
+                        <button href="#" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#AsocieModal">
                             Tratamiento
                         </button>
                     </a>
                     <a class="list-group-item list-group-item-action active">
-                        <button href="#" type="button"  class="btn" data-bs-toggle="modal" data-bs-target="#AsocieModal">
+                        <button href="#" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#AsocieModal">
                             Tratamiento
                         </button>
                     </a>
                 </div>
 
 
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="DesacocieModal" tabindex="-1" aria-labelledby="eliminarFilaLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title" id="eliminarFilaLabel">Desasociar un Tratamiento</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <label>Se eliminira la fila del distribuidor</label>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Aceptar</button>
+                </div>
+            </div>
         </div>
     </div>
 
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="DesacocieModal" tabindex="-1" aria-labelledby="eliminarFilaLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h2 class="modal-title" id="eliminarFilaLabel">Desasociar un Tratamiento</h2>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    <!-- Modal -->
+    <div class="modal fade" id="AsocieModal" tabindex="-1" aria-labelledby="eliminarFilaLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title" id="eliminarFilaLabel">Asociar un Tratamiento</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <label>Se eliminira la fila del distribuidor</label>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Aceptar</button>
+                </div>
+            </div>
         </div>
-        <div class="modal-body">
-          <label >Se eliminira la fila del distribuidor</label>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal" >Aceptar</button>
-        </div>
-      </div>
     </div>
-  </div>
-
-  <!-- Modal -->
-<div class="modal fade" id="AsocieModal" tabindex="-1" aria-labelledby="eliminarFilaLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h2 class="modal-title" id="eliminarFilaLabel">Asociar un Tratamiento</h2>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <label >Se eliminira la fila del distribuidor</label>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal" >Aceptar</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
